--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
     "react-router-dom": "^6.24.1",
     "react-scripts": "5.0.1",
     "redux": "^5.0.1",
-    "sass": "^1.77.8",
     "swiper": "^11.1.5",
     "web-vitals": "^2.1.4"
   },
@@ -57,6 +56,8 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
     "prettier": "^3.3.3",
-    "sass": "1.75.0"
+    "sass": "^1.77.8",
+    "sass-loader": "^16.0.0",
+    "webpack": "^5.93.0"
   }
 }
